# di

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
example/App/: Fwd.h  IApplication.h  Module.cpp  Module.h
example/App/Impl/: Application.cpp  Application.h
example/Brake/: Fwd.h  IBrake.h  Module.cpp  Module.h
example/Brake/Impl/: ParkingBrake.cpp  ParkingBrake.h  RegularBrake.cpp  RegularBrake.h
example/Car/: Fwd.h  ICar.h  Module.cpp  Module.h
example/Car/Impl/: Ferrari.cpp  Ferrari.h
example/Client/: Client.h  ClientModule.cpp  ClientModule.h  ClientTags.h
example/Engine/: Fwd.h  IEngine.h  Module.cpp  Module.h
example/Engine/Impl/: Engine.cpp  Engine.h
example/Gas/: Fwd.h  IEngine.h  Module.cpp  Module.h
example/Gas/Impl/: Engine.cpp  Engine.h
example/Logic/: Fwd.h  IBreak.h  ICar.h  Module.cpp  Module.h
example/Logic/Impl/: Car.cpp  Car.h  ParkingBreak.cpp  ParkingBreak.h  RegularBreak.cpp  RegularBreak.h
example/Model/: Fwd.h  IEngine.h  Module.cpp  Module.h
example/Model/Impl/: Engine.cpp  Engine.h
example/Services/: IServiceA.h  IServiceB.h  ServiceA.h  ServiceB.h  ServicesModule.cpp  ServicesModule.h  ServicesTags.h
example/Util/: Fwd.h  ILogger.h  Module.cpp  Module.h
example/Util/Impl/: Logger.cpp  Logger.h
include/di/: context.h  di.h  fwd.h  tags.h
include/di/Details/: BaseHolder.h  BaseTagHolder.h  Boob.h  Context.h  ContextImpl.h  Error.h  FactoryHolder.h  FactoryTagHolder.h  Fwd.h  HasDiDeps.h  HasDiTags.h  HasMemberDi.h  IsBaseOfTemplate.h  SingletonHolder.h  SingletonTagHolder.h  Tags.h  TypeIdentity.h
include/di/details/: BaseTagHolder.h  ContextImpl.h  FactoryTagHolder.h  Fwd.h  SingletonTagHolder.h  base_tag_holder.h  context_imp.h  fwd.h  singleton_tag_holder.h  transient_tag_holder.h
tests/: CMakeLists.txt  Common.h  ContextTest.cpp  CustomCreatorTest.cpp  DiDepsInContext.cpp  DiDepsInImplementationTest.cpp  DiDepsOverwriteTest.cpp  FactoryTagTest.cpp  InterfaceResolveTest.cpp  MergeContextTest.cpp  SingletonTagTest.cpp  TagRegistrationDependencies.cpp  TestsMain.cpp  UsingDiTest.cpp  catch.hpp
tests/old/: MergeContextTest.cpp  TagRegistrationDependencies.cpp  UsingDiTest.cpp
